--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>random meme project</h1>
-<div class="darkthemeslide"><mat-slide-toggle (click)="toggleDarkTheme()" color="primary" [checked]="savedStatus">Choose Theme</mat-slide-toggle></div>
+<div class="darkthemeslide"><mat-slide-toggle (click)="toggleDarkTheme()" color="primary" [checked]="savedStatus"><b>Choose Theme</b></mat-slide-toggle></div>
 
 <!-- <button >Toggle dark theme</button> -->
 <div class="tab">  
