--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,4 +23,24 @@ button{
 
 }
 body{background-color: black;}
+@media only screen and (max-width: 700px){
+    button{
+        background-color: rgb(63, 21, 21);
+        color: white;
+        border: 2px 2px 2px 2px white;
+        cursor: pointer;
+        width: 100px;
+        height: 30px;
+        align-items: center;
+        justify-content: center;
+        font-size: 10px;
+    }
+    .darkthemeslide{
+        right: 0%;
+        top: 2%;
+    }
+    h1{
+        width: 200px;
+    }
+}
 
