--- a/src/app/anime-memes/anime-memes.component.css
+++ b/src/app/anime-memes/anime-memes.component.css
@@ -19,7 +19,7 @@ th{color: white;
 .carousel-container img.image-active {
     display: block;
     width: 700px;
-    height: 500PX;
+    height: 700px;
     }
 
   
