--- a/src/app/anime-memes/anime-memes.component.html
+++ b/src/app/anime-memes/anime-memes.component.html
@@ -6,7 +6,7 @@
       <thead class="table-light">
         <tr>
           
-          <h1 [ngClass]="{'image-active' : selectedIndex === i}">{{meme.title}}</h1>
+          <!-- <h1 [ngClass]="{'image-active' : selectedIndex === i}">{{meme.title}}</h1> -->
         </tr>
         
         <tr>
