--- a/src/app/dank-memes/dank-memes.component.html
+++ b/src/app/dank-memes/dank-memes.component.html
@@ -6,7 +6,7 @@
   <table *ngFor="let meme of memes; let i = index" class="table table-striped">
     <thead class="table-light">
       <tr >
-        <h1 [ngClass]="{'image-active' : selectedIndex === i}">{{meme.title}}</h1>
+        <!-- <h1 [ngClass]="{'image-active' : selectedIndex === i}">{{meme.title}}</h1> -->
       </tr>
       
          <img  src="{{meme.url}}" alt="error"
