--- a/src/app/dank-memes/dank-memes.component.css
+++ b/src/app/dank-memes/dank-memes.component.css
@@ -88,7 +88,7 @@ opacity: 0.5;
 }
 .carousel-container img.image-active {
     display: block;
-    width: 450px;
+    width: 100%;
     height: 500PX;
     left: 50%;
     right: 50%;
