--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,11 @@ mat-slide-toggle{
     align-items: center;
     justify-content: center;
     padding: 2%;
+    flex-direction: column;
+    gap: 1rem;
+}
+.links{
+    display: flex;
 }
 button{
     background-color: rgb(63, 21, 21);
