little change to css

--- a/src/app/anime-memes/anime-memes.component.css
+++ b/src/app/anime-memes/anime-memes.component.css
@@ -1,4 +1,4 @@
-p{color: white;}
+/* p{color: white;}
 th{color: white;
 }
 .carousel-container{
@@ -100,4 +100,4 @@ opacity: 0.5;
 .carousel-container h1.image-active {
   display: block;
 }
-}
+} */
