--- a/src/app/anime-memes/anime-memes.component.html
+++ b/src/app/anime-memes/anime-memes.component.html
@@ -1,4 +1,7 @@
-<div class="carousel-container">
+<!-- all this is old way i was doing things for some reason i made two components same code which makes no sanse when working with components -->
+<!-- this component is no longer needed but still want to have it around for memorys -->
+
+<!-- <div class="carousel-container">
   <div *ngIf="loadingService.isLoading | async" class="loader-container">
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
   </div>
@@ -6,8 +9,8 @@
       <thead class="table-light">
         <tr>
           
-          <!-- <h1 [ngClass]="{'image-active' : selectedIndex === i}">{{meme.title}}</h1> -->
-        </tr>
+           <h1 [ngClass]="{'image-active' : selectedIndex === i}">{{meme.title}}</h1> -->
+        <!-- </tr>
         
         <tr>
           <img  src="{{meme.url}}" alt="error"
@@ -27,4 +30,5 @@
         (click)="onNextClick()"
         ></i>
         </button>
-  </div>
+  </div> --> 
+  <h1>secret page</h1>
